# using_vidgear

./: Pipfile  README.md  client.py  client_gear.py  hello.py  install_dlc.sh  opencv-audio-video-recording.py  pyproject.toml  record_video.py  record_with_audio.py  server.py  server_gear.py  start_ffmpeg.sh  test.avi  test_record_1.py
